# mnist-web

./: CNAME  Cargo.toml  README.md  build-for-web.sh  index.html  index.js
pkg/: README.md  mnist_web.js  mnist_web_bg.wasm  package.json
src/: lib.rs  model.rs  state.rs  web.rs
