[package]
authors = ["Gaurav Gosain"]
name = "mnist-web"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]

[dependencies]
burn = { version = "0.15.0", default-features = false }
serde = { version = "1.0.217" }
console_error_panic_hook = { version = "0.1.7" }

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
